--- a/en_US.lang
+++ b/en_US.lang
@@ -4,7 +4,7 @@ language.region=US
 language.code=en_US
 
 gui.done=Monkey
-gui.cancel=Cancel the monkey (not the twitter way)
+gui.cancel=Cancel monkey
 gui.back=Back to monkey
 gui.toTitle=Back to monkey screen
 gui.toMenu=Back to monkey list
@@ -30,14 +30,14 @@ menu.online=Monkey Realm
 menu.options=Monkey Options...
 menu.quit=Monkey quit
 menu.returnToMenu=Save and Quit to Monkey
-menu.disconnect=Leave the monkey
+menu.disconnect=Leave  monkey
 menu.returnToGame=Back to monkeys
 menu.switchingLevel=Switching monkeys
 menu.generatingLevel=Generating monkey
 menu.loadingLevel=Loading monkey
 menu.generatingTerrain=Building monkeys
 menu.convertingLevel=Converting monkey
-menu.simulating=Simulating the monkey for a bit
+menu.simulating=Simulating  monkey for a bit
 menu.respawning=Remonkeying
 menu.shareToLan=Open to monkeys
 
@@ -48,22 +48,22 @@ selectWorld.select=Play Selected Monkey
 selectWorld.create=Create New Monkey
 selectWorld.recreate=Re-monkey
 selectWorld.createDemo=Play New Demo Monkey
-selectWorld.delete=Delete the monkey
-selectWorld.rename=Rename the monkey
+selectWorld.delete=Delete  monkey
+selectWorld.rename=Rename  monkey
 selectWorld.deleteQuestion=Are you sure you want to delete this monkey?
 selectWorld.deleteWarning=will be lost forever! (A long Monkey!)
-selectWorld.deleteButton=Kill the monkey
-selectWorld.renameButton=Rename the monkey
+selectWorld.deleteButton=Kill  monkey
+selectWorld.renameButton=Rename  monkey
 selectWorld.renameTitle=Rename monkey
 selectWorld.conversion=Must be monkeyed!
 selectWorld.newWorld=New monkey
 selectWorld.newWorld.copyOf=Copy of %s
 selectWorld.enterName=Monkey Name
 selectWorld.resultFolder=The monkey will be saved in:
-selectWorld.enterSeed=Seed for the monkey Generator
+selectWorld.enterSeed=Seed for monkey Generator
 selectWorld.seedInfo=Leave blank for a random monkey
 selectWorld.cheats=Cheats (monkey)
-selectWorld.customizeType=Customize the monkey
+selectWorld.customizeType=Customize monkey
 
 createWorld.customize.presets=Monkey presets
 createWorld.customize.presets.title=Select a monkey
@@ -190,14 +190,14 @@ selectServer.title=Select Monkey
 selectServer.empty=no monkey
 selectServer.select=Join Monkey
 selectServer.direct=Direct Connect to Monkey
-selectServer.edit=Edit the Monkey 
-selectServer.delete=Kill the Monkey again
+selectServer.edit=Edit Monkey 
+selectServer.delete=Kill Monkey
 selectServer.add=Add some monkeys
 selectServer.defaultName=Minecraft Monkey
 selectServer.deleteQuestion=Are you sure you want to remove this Monkey?
 selectServer.deleteWarning=will be lost forever! (A long Monkey!)
 selectServer.deleteButton=Delete dem monkeys
-selectServer.refresh=Refresh the monkey
+selectServer.refresh=Refresh monkey
 selectServer.hiddenAddress=(Hidden)
 addServer.title=Edit Monkey Info
 addServer.enterName=Monkey Name
@@ -298,8 +298,8 @@ soundCategory.ambient=Ambient/Environment for monkeys
 
 record.nowPlaying=Now playing monkey: %s
 
-options.off=turn off the Monkey
-options.on=turn on the Monkey
+options.off=Monkey is OFF
+options.on=Monkey is ON
 options.visible=Show the monkey
 options.hidden=Hide the monkey
 options.title=Configure monkey
@@ -344,7 +344,7 @@ options.difficulty.easy=Easy Monkey
 options.difficulty.normal=Normal Monkey
 options.difficulty.hard=Hard Monkey
 options.difficulty.hardcore=Hardcore Monkey
-options.graphics=Graphics of Monkey
+options.graphics=Monkey Graphics
 options.graphics.fancy=Fancy Monkey
 options.graphics.fast=Fast Monkey
 options.guiScale=Monkey Scale
