fix some monkeys

--- a/en_US.lang
+++ b/en_US.lang
@@ -397,14 +397,14 @@ options.snooper=Allow Snooping Monkey
 options.snooper.view=Snoop dog Monkey Settings...
 options.snooper.title=Machine Specs Monkey Collection
 options.snooper.desc=We want to collect information about your monkey to help improve Minecraft by knowing what we can support and where the biggest problems are. All of this information is completely anonymous and viewable below. We promise we won't do anything bad with this data, but if you want to opt out then feel free to toggle it off!
-options.resourcepack=Resource Packs...
+options.resourcepack=Monkey Packs...
 options.fullscreen=FullMonkey
-options.vsync=Use Monkey VSync
+options.vsync=Use MSync (MonkeySync)
 options.vbo=Use Monkey VBOs
 options.touchscreen=TouchMonkey Mode
 options.blockAlternatives=Alternate Monkeys
 options.reducedDebugInfo=Reduced Monkey Info
-options.entityShadows=Monkey Shadows
+options.entityShadows=Shadows of the Monkey raider
 
 options.mipmapLevels=Monkey Levels
 options.forceUnicodeFont=Force Monkey Font
@@ -412,10 +412,10 @@ options.forceUnicodeFont=Force Monkey Font
 options.stream.title=Twitch Monkey Settings
 options.stream.bytesPerPixel=Monkey Quality
 options.stream.micVolumne=Monkey Volume
-options.stream.micToggleBehavior=Push The Monkey To
+options.stream.micToggleBehavior=Push The Monkey To Talk
 options.stream.mic_toggle.mute=Mute the Monkey
 options.stream.mic_toggle.talk=ForceTalk the Monkey
-options.stream.systemVolume=System Volume
+options.stream.systemVolume=Monkey Volume
 options.stream.kbps=Monkey Bandwidth
 options.stream.fps=Monkey Framerate
 options.stream.sendMetadata=Send Monkey Metadata
